_archived_unused_code/other/bridge/base/0-deckchatbot-monorepo-namespace.yaml
#! 0-deckchatbot-monorepo-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: deckchatbot-monorepo
    labels:
        com.docker.compose.project: deckchatbot-monorepo
